# ai-lang

./: .coverage  CLAUDE.md  README.md  README_ja.md  demo_cli.sh  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
docs/: effects_design.md  syntax.md  testing.md  typeclass_design.md
examples/: basic.ai  demo.ai  error_demo1.ai  error_demo2.ai  error_demo3.ai  error_demo4.ai  error_demo_constructor.ai  error_demo_verbose.ai  higher_rank_demo.ai  improved_error_demo.ai  io_greet.ai  io_hello.ai  io_interactive.ai  io_nested.ai  io_pure.ai  io_sequence.ai  io_simple_greet.ai  minimal.ai  opt_eta.ai  opt_test.ai  opt_test2.ai  optimization_demo.ai  optimization_demo_simple.ai  polymorphic_functions.ai  polymorphism_demo.ai  showcase.ai  simple_demo.ai  test_complete.ai  test_coverage_simple.ai  test_head.ai  test_io_type.ai  test_module.ai  test_multi_lambda.ai  test_multi_lambda_simple.ai  test_param_func.ai  test_parameterized.ai  test_positivity_simple.ai  test_pure.ai  test_simple_param.ai  test_simple_poly.ai  (+14 more)
examples/lib/: List.ai
src/ai_lang/: __init__.py  cli.py  colors.py  constraints.py  core.py  delayed_inference.py  elaboration.py  error_reporting.py  errors.py  evaluator.py  lexer.py  optimizer.py  parser.py  repl.py  syntax.py  totality.py  typechecker.py
tests/: __init__.py  test_evaluator.py  test_higher_rank_polymorphism.py  test_io.py  test_io_simple.py  test_lexer.py  test_multi_lambda_parsing.py  test_optimizer.py  test_parser.py  test_totality.py  test_typechecker.py  test_typeclasses.py
