[tool.poetry]
name = "ai-lang"
version = "0.1.0"
description = "A dependently-typed programming language implemented in Python"
authors = ["AI Lang Contributors"]
readme = "README.md"
packages = [{include = "ai_lang", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.9"
rich = "^13.7.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
mypy = "^1.9.0"
black = "^24.3.0"
ruff = "^0.3.4"

[tool.poetry.scripts]
ai-lang = "ai_lang.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ai_lang --cov-report=term-missing"